Bump up cucumber-reporting libraries